--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -1,7 +1,10 @@
+
+
 {
   "name": "nodejs-helloworld",
   "version": "1.0.0",
   "description": "Hello World!",
+  "scripts": { "start": "node app.js" },
   "main": "app.js",
   "author": "Red Hat Training",
   "license": "ASL",
